src/test/ui/typeck/issue-79040.stderr
error[E0369]: cannot add `{integer}` to `&str`
  --> $DIR/issue-79040.rs:2:25
   |
LL |     const FOO = "hello" + 1;
   |                 ------- ^ - {integer}
   |                 |
   |                 &str

error[E0369]: cannot add `{integer}` to `&str`
  --> $DIR/issue-79040.rs:2:25
   |
LL |     const FOO = "hello" + 1;
   |                 ------- ^ - {integer}
   |                 |
   |                 &str

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0369`.
